--- a/Week-1/Week-1.html
+++ b/Week-1/Week-1.html
@@ -6,110 +6,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
-    <style>
-        body {
-            font-family: 'Lato';
-        }
-
-        .sidenav {
-            height: 78%;
-            width: 60px;
-            position: fixed;
-            z-index: 1;
-            top: 0;
-            left: 0;
-            background-color: #d5d7db;
-            overflow-x: hidden;
-            padding-top: 20px;
-            text-align: center;
-        }
-
-        .sidenav a:hover {
-            color: #f1f1f1;
-            display: grid;
-        }
-
-        .sidenav span {
-            cursor: pointer;
-
-        }
-
-        .card {
-            height: 250px;
-            border-radius: 5px;
-            margin-left: 4%;
-            margin-bottom: 2%;
-            background-color: #4a4947;
-        }
-
-
-        img {
-            height: 180px;
-            width: 200px;
-            padding-top: 35px;
-
-        }
-
-        .container {
-            padding: 2px 25px;
-            color: white;
-            margin-top: 2%;
-        }
-
-        .footer {
-            padding: 2px 25px;
-            color: white;
-            margin-top: 2%;
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%
-        }
-
-        .playOptions {
-            padding: 5px;
-            padding-top: 38px;
-        }
-
-        .playGaps {
-            margin-right: 20px;
-            padding-top: 3px;
-        }
-
-        .table {
-            margin-left: 5%;
-            margin-bottom: 10%;
-        }
-
-        table {
-            font-family: arial, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        td {
-            text-align: left;
-            padding: 8px;
-            width: 30px;
-        }
-
-        tr:nth-child(even) {
-            background-color: #dddddd;
-        }
-
-        button {
-            border: 2px solid black;
-            color: blue;
-        }
-
-        .playFooter {
-            padding: 3%;
-            margin-left: 17%;
-            margin-right: 5px;
-            justify-content: end;
-        }
-    </style>
-</head>
+        <link rel="stylesheet" href="./style.css"/>
+    </head>
 
 <body>
     <div style="height: 100%;">
