--- a/Week-2/rolling-cards/cards.html
+++ b/Week-2/rolling-cards/cards.html
@@ -5,7 +5,7 @@
 <body>
     <div class="container">
         <label style="position: relative">
-            <strong>Hi!</strong></label>
+            <b>Hi!</b></label>
         <div style="display: grid;position: absolute">
             <span style="display: flex">
                 <span class="box1">
